# pyproject.toml
[project]
name = "comfyui-workflownavigator" # Unique identifier for your node. Immutable after creation.
description = "Adds a Navigator sidebar for keyboard-first workflow search and jump."
version = "0.2.1" # Custom node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-WorkflowNavigator"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-WorkflowNavigator" # Display name for the Custom Node. Can be changed later.
